# zephyr_on_xxx

./: .gitignore  README.md
manifest-repo/: west.yml
xxx/boards/sipeed/licheerv_nano/licheerv_nano_c906b/: CMakeLists.txt  Kconfig.licheerv_nano_c906b  board.yml  licheerv_nano_c906b-pinctrl.dtsi  licheerv_nano_c906b.dts  licheerv_nano_c906b.yaml  licheerv_nano_c906b_defconfig  pinmux.c  sg2002_uart.h  uart0.c
xxx/drivers/: CMakeLists.txt  Kconfig
xxx/drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.sophgo_sg200x  clock_control_sophgo_sg200x.c
xxx/drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.sophgo  pinctrl_sophgo.c
xxx/drivers/reset/: CMakeLists.txt  Kconfig  Kconfig.sophgo  reset_sg200x.c
xxx/drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.sophgo  sg200x_sdhc.c  sg200x_sdhc.h
xxx/drivers/timer/: CMakeLists.txt  Kconfig
xxx/dts/bindings/: vendor-prefixes.txt
xxx/dts/bindings/clock/: sophgo,sg200x-clock.yaml
xxx/dts/bindings/pinctrl/: sophgo,pinctrl.yaml
xxx/dts/bindings/reset/: sophgo,sg2002-reset.yaml
xxx/dts/bindings/sdhc/: sophgo,sg200x-sdhc.yaml
xxx/dts/riscv/sophgo/: cv180xb-c906b.dtsi  cv180xb-c906l.dtsi  sg200x-c906b.dtsi  sg200x-c906l.dtsi
xxx/licheerv_nano_c906b_test/: CMakeLists.txt
xxx/licheerv_nano_c906b_test/src/: led.c  led.h  main.c
xxx/soc/sophgo/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  linker.ld  soc.yml
xxx/soc/sophgo/common/: CMakeLists.txt  pinctrl_soc.h
xxx/soc/sophgo/cv180xb/: Kconfig  Kconfig.defconfig  Kconfig.soc
xxx/soc/sophgo/sg200x/: Kconfig  Kconfig.defconfig  Kconfig.soc
(+8 files in other folders)
